--- a/ai59.html
+++ b/ai59.html
@@ -37,6 +37,7 @@
             }
         }
     </script>
+
 </body>
             ·
 <a href="https://fuas4zjom1.feishu.cn/docx/UTPHdZLrhoKFuqxoRwUcayPynnc" target="_blank" style="color: #007BFF; text-decoration: none;" >更多软件详细介绍</a>
@@ -49,7 +50,7 @@
         /* 模拟手机的样式100%或vh */
         .mobile-container {
             width: 375px; /* 常见手机宽度 */
-            height: 700px; /* 常见手机高度 */
+            height: 90vh; /* 常见手机高度 */
             border: 1px solid #ccc;
             border-radius: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -66,6 +67,13 @@
 </head>
 
 <body>
+<script>
+        // 监听 document 对象的 contextmenu 事件
+        document.addEventListener('contextmenu', function (e) {
+            // 阻止默认的右键菜单弹出
+            e.preventDefault();
+        });
+</script>
     <div class="mobile-container">
         <!-- 使用 iframe 嵌入指定网页 -->
         <iframe class="mobile-screen" src="https://ai59.doujia5799.top/addons/xz_aihost/h5/?shareopenid=xz#/" frameborder="0"></iframe>
