--- a/ai59.html
+++ b/ai59.html
@@ -1,146 +1,86 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>数字人AI生成器</title>
     <style>
-        /* 全局样式 */
+        /* 全局样式，设置文本居中 */
         body {
-            margin: 0;
-            padding: 20px;
-            font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
         }
 
-        /* 复制控件样式 */
-        .copy-section {
-            margin: 20px 0;
+        /* 隐藏 input 元素 */
+        #copyText {
+            display: none;
         }
+
+        /* 复制文本按钮样式 */
         .copy-text {
             color: #007BFF;
+            text-decoration: none;
             cursor: pointer;
-            transition: opacity 0.3s;
-        }
-        .copy-text:hover {
-            opacity: 0.8;
-        }
-        #copyText {
-            position: absolute;
-            left: -9999px;
         }
 
-        /* 提示信息样式 */
-        .toast {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(0,0,0,0.8);
-            color: white;
-            padding: 12px 24px;
-            border-radius: 4px;
-            display: none;
-            z-index: 1000;
+        /* 链接样式 */
+        a {
+            color: #007BFF;
+            text-decoration: none;
         }
 
-        /* 手机模拟容器 */
+        /* 模拟手机的样式 */
         .mobile-container {
-            width: 100%;
-            max-width: 375px;
-            height: 60vh;
-            max-height: 367px;
-            border: 12px solid #333;
-            border-radius: 40px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            margin: 20px auto;
+            width: 375px; /* 常见手机宽度 */
+            height: 567px; /* 常见手机高度 */
+            border: 1px solid #ccc;
+            border-radius: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            margin: 10px auto;
             overflow: hidden;
-            background: #fff;
-            position: relative;
         }
 
-        /* 手机状态栏模拟 */
-        .mobile-notch {
-            height: 30px;
-            background: #333;
-            position: relative;
-        }
-        .mobile-notch::after {
-            content: '';
-            position: absolute;
-            bottom: -8px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 60px;
-            height: 4px;
-            background: #666;
-            border-radius: 2px;
-        }
-
-        /* iframe容器 */
-        .iframe-container {
-            height: calc(100% - 30px);
-        }
         .mobile-screen {
             width: 100%;
             height: 100%;
-            border: 0;
+            border: none;
         }
     </style>
 </head>
 
 <body>
-    <!-- 提示信息 -->
-    <div class="toast" id="toast"></div>
+    <!-- 要复制的文本，使用 display: none 隐藏 -->
+    <input type="text" id="copyText" value="rsk616" readonly>
+    <!-- 以文字形式呈现的“按钮” -->
+    <span class="copy-text" onclick="copyToClipboard()">点击复制客服微信号</span>
 
-    <!-- 复制功能模块 -->
-    <div class="copy-section">
-        <span class="copy-text" onclick="copyToClipboard()">点击复制客服微信号</span>
-        <input type="text" id="copyText" value="rsk616" readonly>
-        <br>
-        <a href="https://fuas4zjom1.feishu.cn/docx/UTPHdZLrhoKFuqxoRwUcayPynnc" 
-           target="_blank" 
-           class="copy-text">
-           更多软件详细介绍
-        </a>
-    </div>
+    <a href="https://fuas4zjom1.feishu.cn/docx/UTPHdZLrhoKFuqxoRwUcayPynnc" target="_blank">更多软件详细介绍</a>
 
-    <!-- 手机模拟器 -->
     <div class="mobile-container">
-        <div class="mobile-notch"></div>
-        <div class="iframe-container">
-            <iframe class="mobile-screen" 
-                    src="https://ai59.doujia5799.top/addons/xz_aihost/h5/?shareopenid=xz#/"
-                    allow="fullscreen"
-                    loading="eager">
-            </iframe>
-        </div>
+        <!-- 使用 iframe 嵌入指定网页 -->
+        <iframe class="mobile-screen" src="https://ai59.doujia5799.top/addons/xz_aihost/h5/?shareopenid=xz#/" frameborder="0"></iframe>
     </div>
 
     <script>
-        // 复制功能
-        function copyToClipboard() {
-            const text = document.getElementById('copyText').value;
-            navigator.clipboard.writeText(text).then(() => {
-                showToast('微信号已复制，请到微信添加好友');
-            }).catch(() => {
-                showToast('复制失败，请手动长按微信号复制');
-            });
+        async function copyToClipboard() {
+            const copyText = document.getElementById("copyText").value;
+            try {
+                // 使用 Clipboard API 复制文本
+                await navigator.clipboard.writeText(copyText);
+                alert("客服微信号已复制，请到微信添加好友。");
+            } catch (err) {
+                console.error('复制失败:', err);
+                alert('复制失败，请手动复制微信号：' + copyText);
+            }
         }
 
-        // 显示提示信息
-        function showToast(message, duration = 2000) {
-            const toast = document.getElementById('toast');
-            toast.textContent = message;
-            toast.style.display = 'block';
-            setTimeout(() => {
-                toast.style.display = 'none';
-            }, duration);
-        }
-
-        // 禁用右键菜单
-        document.addEventListener('contextmenu', e => e.preventDefault());
+        // 监听 document 对象的 contextmenu 事件
+        document.addEventListener('contextmenu', function (e) {
+            // 阻止默认的右键菜单弹出
+            e.preventDefault();
+        });
     </script>
 </body>
+
 </html>
